--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -1,7 +1,28 @@
 {{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}
+
 {{#queryParams}}
-val {{paramName}} = request.queryParameters["{{paramName}}"]{{#isArray}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{^isArray}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{#required}}!!{{/required}}{{/defaultValue}}{{/isArray}}
+val {{paramName}} = request.queryParameters["{{paramName}}"]{{#isArray}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{^isArray}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isArray}}
 {{/queryParams}}
+
 {{#headerParams}}
-val {{paramName}} = request.queryParameters["{{paramName}}"]
+  val {{paramName}} = request.request.headers["{{paramName}}"]{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}
 {{/headerParams}}
+
+
+val notSetRequiredParams = mutableSetOf<String>()
+
+{{#allParams}}
+{{^defaultValue}}{{#required}}
+if({{paramName}} == null) {
+  notSetRequiredParams.add("{{paramName}}")
+}
+{{/required}}{{/defaultValue}}
+{{/allParams}}
+
+if(notSetRequiredParams.isNotEmpty()) {
+  return request
+    .createResponseBuilder(HttpStatus.BAD_REQUEST)
+    .body("Required parameters missing: ${notSetRequiredParams.joinToString { ", " }}")
+    .build()
+}
+
