--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -12,10 +12,7 @@ val {{paramName}} = request.queryParameters["{{paramName}}"]{{#isArray}}?.split(
 val notSetRequiredParams = mutableSetOf<String>()
 
 {{#allParams}}
-{{^defaultValue}}{{#required}}
-if({{paramName}} == null) {
-  notSetRequiredParams.add("{{paramName}}")
-}
+{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{paramName}}") }
 {{/required}}{{/defaultValue}}
 {{/allParams}}
 
