--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -1,19 +1,14 @@
 {{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}
-
 {{#queryParams}}
-val {{paramName}} = request.queryParameters["{{paramName}}"]{{#isArray}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{^isArray}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isArray}}
+val {{paramName}} = request.queryParameters["{{paramName}}"]{{^isArray}}{{#isEnum}}?.let{ {{enumName}}_{{operationId}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}_{{operationId}}.valueOf("{{defaultValue}}"){{/defaultValue}}  {{/isEnum}}{{/isArray}}{{#isArray}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{^isArray}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}{{/isArray}}
 {{/queryParams}}
-
 {{#headerParams}}
-  val {{paramName}} = request.request.headers["{{paramName}}"]{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}
+val {{paramName}} = request.request.headers["{{paramName}}"]{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}
 {{/headerParams}}
 
-
 val notSetRequiredParams = mutableSetOf<String>()
-
 {{#allParams}}
-{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{paramName}}") }
-{{/required}}{{/defaultValue}}
+{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{paramName}}") }{{/required}}{{/defaultValue}}
 {{/allParams}}
 
 if(notSetRequiredParams.isNotEmpty()) {
