--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -3,7 +3,7 @@
 val {{paramName}} = request.queryParameters["{{paramName}}"]{{^isArray}}{{#isEnum}}?.let{ {{enumName}}_{{operationId}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}_{{operationId}}.valueOf("{{defaultValue}}"){{/defaultValue}}  {{/isEnum}}{{/isArray}}{{#isArray}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{^isArray}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}{{/isArray}}
 {{/queryParams}}
 {{#headerParams}}
-val {{paramName}} = request.request.headers["{{paramName}}"]{{#isEnum}}?.let{ {{enumName}}_{{operationId}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}_{{operationId}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
+val {{paramName}} = request.headers["{{paramName}}"]{{#isEnum}}?.let{ {{enumName}}_{{operationId}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}_{{operationId}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
 {{/headerParams}}
 
 val notSetRequiredParams = mutableSetOf<String>()
