--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
@@ -2,6 +2,9 @@
 * {{{description}}}
 * Values: {{#allowableValues}}{{#enumVars}}{{&name}}{{^-last}},{{/-last}}{{/enumVars}}{{/allowableValues}}
 */
+{{#isDeprecated}}
+@Deprecated(message = "This enum is deprecated.")
+{{/isDeprecated}}
 enum class {{classname}}(val value: {{dataType}}) {
 {{#allowableValues}}{{#enumVars}}
     {{&name}}({{{value}}}){{^-last}},{{/-last}}{{#-last}};{{/-last}}
