use interface for creation

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/api.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/api.mustache
@@ -17,7 +17,7 @@ import javax.naming.Binding;
 {{#operations}}
 class {{classname}} {
 
-  val api = {{#removeApiSuffix}}{{classname}}{{/removeApiSuffix}}Api()
+  val api: {{classname}}Interface = {{#removeApiSuffix}}{{classname}}{{/removeApiSuffix}}Api()
 
 {{#operation}}
   {{#allParams}}
