--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/methodParams.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/methodParams.mustache
@@ -1,4 +1,4 @@
-@HttpTrigger(name = "req", methods = [HttpMethod.{{httpMethod}}], authLevel = AuthorizationLevel.FUNCTION, route = "{{#formatPath}}{{path}}{{/formatPath}}")
+@HttpTrigger(name = "req", methods = [HttpMethod.{{httpMethod}}], authLevel = AuthorizationLevel.ANONYMOUS, route = "{{#formatPath}}{{path}}{{/formatPath}}")
 request: HttpRequestMessage<{{#bodyParam}}{{dataType}}{{/bodyParam}}{{^bodyParam}}{{^formParams.isEmpty}}String{{/formParams.isEmpty}}{{^ formParams }}Void{{/ formParams }}{{/bodyParam}}>,
 {{#pathParams}}@BindingName("{{paramName}}") {{paramName}}: {{dataType}}{{^defaultValue}}?{{/defaultValue}}{{#defaultValue}} = {{defaultValue}}{{/defaultValue}}, {{/pathParams}}
 {{#vendorExtensions.x-azure-additional-properties}}
