--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
@@ -20,6 +20,7 @@ interface {{classname}}Interface {
 {{#operation}}
     {{#allParams}}
         {{#isEnum}}
+            {{#dump}}{{/dump}}
             {{#isDeprecated}}
                 @Deprecated(message = "This enum is deprecated.")
             {{/isDeprecated}}
