--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/optionalDataType.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/optionalDataType.mustache
@@ -1,1 +1,7 @@
-{{#required}}{{{dataType}}}{{/required}}{{^required}}{{#defaultValue}}{{{dataType}}}{{/defaultValue}}{{^defaultValue}}{{{dataType}}}?{{/defaultValue}}{{/required}}
+{{#required}}
+    {{>smartDataType}}
+{{/required}}
+{{^required}}
+    {{#defaultValue}}{{>smartDataType}}{{/defaultValue}}
+    {{^defaultValue}}{{>smartDataType}}?{{/defaultValue}}
+{{/required}}
