--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -1,19 +1,14 @@
+{{#debug}}apiMethodBodyParameters.mustache{{/debug}}
 {{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}{{!
 
 }}{{#queryParams}}
 // query parameter {{! ----------------------  queryParams ----------------------}}
-val {{paramName}} = request.queryParameters["{{paramName}}"]{{!
-}}{{^isArray}}{{#isEnum}}{{#debug}} <<< no array and enum >>>
-{{/debug}}?.let{ {{enumName}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}.valueOf("{{defaultValue}}"){{/defaultValue}}  {{/isEnum}}{{/isArray}}{{!
-}}{{#isArray}}{{#debug}} <<< array >>>{{/debug}}{{!
-}}?.split(",")?.toTypedArray() ?: emptyArray(){{/isArray}}{{!
-}}{{^isArray}}{{^isEnum}}{{#debug}} <<< no array no enum >>> {{/debug}}{{#dump}}{{/dump}}{{#defaultValue}} ?: {{{dataType}}}.{{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}{{/isArray}}{{!
-}}{{>parseQueryParameter}}
+val {{paramName}} = request.queryParameters["{{paramName}}"]{{>parseQueryParameter}}
 {{/queryParams}}
 
 {{#headerParams}}
 // header parameter {{! ----------------------  headerParams ----------------------}}
-val {{paramName}} = request.headers["{{paramName}}"]{{#isEnum}}?.let{ {{enumName}}_{{operationId}}.valueOf(it) }{{#defaultValue}} ?: {{enumName}}_{{operationId}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
+val {{paramName}} = request.headers["{{paramName}}"]{{#isEnum}}?.let{ {{datatypeWithEnum}}.valueOf(it) }{{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
 {{/headerParams}}
 
 // required parameter validation
