--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -2,19 +2,20 @@
 {{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}{{!
 
 }}{{#queryParams}}
-// query parameter {{! ----------------------  queryParams ----------------------}}
-val {{paramName}} = request.queryParameters["{{paramName}}"]{{>parseQueryParameter}}
+// query parameter {{! ----------------------  queryParams ----------------------
+ for keywords: baseName='data', paramName='`data`' }}
+val {{paramName}} = request.queryParameters["{{baseName}}"]{{>parseQueryParameter}}
 {{/queryParams}}
 
 {{#headerParams}}
 // header parameter {{! ----------------------  headerParams ----------------------}}
-val {{paramName}} = request.headers["{{paramName}}"]{{#isEnum}}?.let{ {{datatypeWithEnum}}.valueOf(it) }{{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
+val {{paramName}} = request.headers["{{baseName}}"]{{#isEnum}}?.let{ {{datatypeWithEnum}}.valueOf(it) }{{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
 {{/headerParams}}
 
 // required parameter validation
 val notSetRequiredParams = mutableSetOf<String>()
 {{#allParams}}
-{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{paramName}}") }{{/required}}{{/defaultValue}}
+{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{baseName}}") }{{/required}}{{/defaultValue}}
 {{/allParams}}
 
 if(notSetRequiredParams.isNotEmpty()) {
