--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -9,14 +9,22 @@ val {{paramName}} = request.queryParameters["{{baseName}}"]{{>parseQueryParamete
 
 {{#headerParams}}
 // header parameter {{! ----------------------  headerParams ----------------------}}
-val {{paramName}} = request.headers["{{baseName}}"]{{#isEnum}}?.let{ {{datatypeWithEnum}}.valueOf(it) }{{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}{{/isEnum}}{{^isEnum}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
-{{/headerParams}}
+val {{paramName}} = request.headers["{{baseName}}"] {{#trim1L}}
+{{#isEnum}}?.let{
+  {{#debug}}isEnum{{/debug}}
+  {{#isArray}}TODO()/* array of enums in header parameter */{{/isArray}}
+  {{^isArray}}{{datatypeWithEnum}}.valueOf(it) {{/isArray}}
+} {{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}
+{{/isEnum}}
+{{^isEnum}}{{#debug}}no enum{{/debug}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
+{{/trim1L}}{{/headerParams}}
 
 // required parameter validation
 val notSetRequiredParams = mutableSetOf<String>()
-{{#allParams}}
-{{^defaultValue}}{{#required}}{{paramName}} ?: run{ notSetRequiredParams.add("{{baseName}}") }{{/required}}{{/defaultValue}}
-{{/allParams}}
+{{#allParams}}{{^defaultValue}}{{#required}}
+{{#bodyFormParam}}// TODO: bodyFormParam [{{paramName}}/{{baseName}}] must be parsed from the body{{#debug}}filtered {{paramName}}/{{baseName}} because it's a form body parameter{{/debug}}{{/bodyFormParam}}
+{{^bodyFormParam}}{{paramName}} ?: run{ notSetRequiredParams.add("{{baseName}}") } {{#debug}} {{paramName}}/{{baseName}} is a required parameter{{/debug}}{{/bodyFormParam}}
+{{/required}}{{/defaultValue}}{{/allParams}}
 
 if(notSetRequiredParams.isNotEmpty()) {
   return request
